# PCOS-PREDICTION-WEBAPP

./: README.md
backend/: pyproject.toml
frontend/: pyproject.toml  requirements.txt
frontend/pcos_prediction_webapp/: __init__.py
