[project]
name = "pcos-detection"
version = "0.1.0"
description = "PCOS prediction web app using ML"
requires-python = ">=3.10"
package-mode = false  # Important! Do NOT try to install as a package

dependencies = [
    "pandas=2.2.3",
    "scikit-learn=1.6.1",
    "streamlit=1.41.1",
  
]

[tool.uv.workspace]
members = ["backend"]
